[MAX2025][FF][Showcase] Fixed Mobile truncation

--- a/creativecloud/blocks/showcase-marquee/showcase-marquee.css
+++ b/creativecloud/blocks/showcase-marquee/showcase-marquee.css
@@ -57,8 +57,8 @@
   gap: var(--spacing-m);
   width: 100%;
   position: relative;
-  top: 1480px;
-  left: 740px;
+  top: 90%;
+  right: 10%;
 }
 
 .showcase-marquee .text .heading {
@@ -72,7 +72,7 @@
   line-height: 150%;
   letter-spacing: 0;
   color: #FCFCFC;
-  width: 560px;
+  width: 40%;
   text-align: center;
 }
 
@@ -215,18 +215,7 @@
   }
 
   .showcase-marquee .text {
-    position: absolute;
     top: 880px;
-    left: 50%;
-    /* transform: translateX(100%); */
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
-    width: 700px;
-    height: auto;
-    align-items: center;
-    justify-content: center;
-    display: flex
   }
 
   .showcase-marquee .background .mobile-only,
